--- a/views/edit-held/zauber.jade
+++ b/views/edit-held/zauber.jade
@@ -28,7 +28,7 @@ html(lang="de")
 		main.container
 			form.panel.panel-default(action="/zauber/"+_Held._id, method="post", accept-charset="utf-8")
 				h1.panel-heading.dcm-caption Zauber
-				ul.list-group
+				ul#zauber.list-group
 					li.list-group-item.text-center
 						.row.dcm-row
 							.col-xs-11.col-xs-offset-1.col-sm-5
@@ -66,7 +66,7 @@ html(lang="de")
 				- var __heldReps = ["Mag"]
 				if Array.isArray(_Held.Magie.Repräsentation) && _Held.Magie.Repräsentation.length
 					- __heldReps = _Held.Magie.Repräsentation.map(function(item) { return item.short; })
-				ul.list-group.container-fluid.text-center
+				ul#liste.list-group.container-fluid.text-center
 					li.list-group-item
 						.row.dcm-row
 							.col-xs-10.col-xs-offset-2.col-sm-7.col-sm-offset-1.col-md-4
@@ -91,126 +91,4 @@ html(lang="de")
 											option(value=__rep, selected=(__heldReps.indexOf(__rep) > -1))=__rep
 								.col-xs-10.col-xs-offset-2.col-sm-11.col-sm-offset-1.col-md-5.col-md-offset-0.text-left=__stdSpell.Merkmale.join(', ')
 
-	//-body
-		nav
-			ul#main-menu
-				li
-					a.mitte(title="springe zu Abschnitt ...") &#8681;
-					ul
-						li
-							a(href="#spell_choice") Zauber steigern
-						li
-							a(href="#spell_list") Zauber hinzufügen
-				li
-					a(href="#top") [Seitenanfang]
-				li
-					a(href="#save") [speichern]
-				li
-					a(href="/magie/"+_held._id, title="Magiebogen")= "⇒ "+_held.Person.Name.split(' ')[0]
-		header#top
-			h1.mitte
-				a(href="/held/"+_held._id)= _held.Person.Name
-		
-		main
-			form#newSpell(action="/zauber/"+_held._id, method="post", accept-charset="utf-8")
-				input(type="hidden", name="_method", value="put")
-				
-				table#spell_choice.data-section.eigenschaften.mitte.tablesorter
-					caption Zauber
-					colgroup
-						col(style="width: 2.5em;")
-						col(style="width: 25em;")
-						col
-						col(span="4" style="width: 7em;")
-					thead
-						tr
-							td
-							th Zauber
-							th Spezialisierung
-							th Rep.
-							th Kompl.
-							th Lern
-							th ZfW
-					tfoot(style="display: none;")
-						tr#spell_template
-							td
-								input.id(type="hidden", name="Magie.Zauber[{index}][_zauber]", value="")
-								input.lock(type="checkbox", checked)
-							td.links
-								label.name
-							td.links.spez
-							td
-								input.rep(type="hidden", name="Magie.Zauber[{index}][Repräsentation]")
-								label.rep
-							td.kompl
-							td
-								select.lern(size="1", name="Magie.Zauber[{index}][Lernstufe]")
-									each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-										option= kat
-							td.mitte
-								input.mitte(type="number", name="Magie.Zauber[{index}][ZfW]", value="0", min="0", max="35" step="1")
-								
-					tbody
-						if Array.isArray(_held.Magie.Zauber)
-							each __spell, __idx in _held.Magie.Zauber
-								tr(data-name="Magie.Zauber[#{__idx}][Spezialisierung][]", data-options=__spell._zauber.SpoMod.concat(__spell._zauber.Varianten.filter(function(item) { return (item.Repräsentationen.indexOf(__spell.Repräsentation) > -1) }).map(function(item) { return item.Name})).join('|'))
-									td
-										input(type="hidden", name="Magie.Zauber[#{__idx}][_zauber]", value=__spell._zauber._id)
-										input.lock(type="checkbox", checked)
-									td.links
-										label.name=__spell._zauber.Name
-									td.links
-										if Array.isArray(__spell.Spezialisierung)
-											each __spez in __spell.Spezialisierung
-												.wrapper
-													button.del(type="button")= "\u2717"
-													input(type="text", name="Magie.Zauber[#{__idx}][Spezialisierung]", value=__spez)
-										button.addspez(type="button") +
-									td
-										input.rep(type="hidden", name="Magie.Zauber[#{__idx}][Repräsentation]", value=__spell.Repräsentation)
-										label.rep=__spell.Repräsentation
-									td=__spell._zauber.Komplexität
-									td
-										select(size="1", name="Magie.Zauber[#{__idx}][Lernstufe]")
-											each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-												option(selected=__spell.Lernstufe === kat)= kat
-									td.mitte
-										input.mitte(type="number", name="Magie.Zauber[#{__idx}][ZfW]", min="0", max="35", step="1", value=__spell.ZfW)
-				a#save
-				.mitte
-					button(type="submit", disabled) speichern
-		section
-			table#spell_list.data-section.eigenschaften.mitte.tablesorter
-				caption Zauber hinzufügen
-				colgroup
-					col(style="width: 25em")
-					col
-					col(style="width: 10em")
-					col(span="3", style="width: 7em;")
-				thead
-					tr
-						th Zauber
-						th Merkmal
-						th Probe
-						th Kompl.
-						th Rep.
-						td
-				tbody
-					- var __heldReps = ["Mag"]
-					if Array.isArray(_held.Magie.Repräsentation) && _held.Magie.Repräsentation.length
-						- __heldReps = _held.Magie.Repräsentation.map(function(item) { return item.short; })
-					each __stdSpell in _zauber
-						tr
-							td.links
-								span.name=__stdSpell.Name
-								input.id(type="hidden", value=__stdSpell._id)
-							td.links=__stdSpell.Merkmale.join(', ')
-							td="("+__stdSpell.Probe.join(' · ')+")"
-							td.kompl=__stdSpell.Komplexität
-							td
-								select(size="1")
-									each __rep in __stdSpell.Repräsentationen
-										option(value=__rep, selected=(__heldReps.indexOf(__rep) > -1))=__rep
-							td
-								button.add(type="button") neu
 		script(src="/js/edit-zauber.js")
