--- a/views/edit-held/kleidung.jade
+++ b/views/edit-held/kleidung.jade
@@ -50,13 +50,13 @@ html(lang="de")
 			form(action="/kleidung/"+_Held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
 
-				section.panel.panel-default
+				section#armor.panel.panel-default
 					.panel-heading.dcm-caption Rüstungen
 					.panel-body
 					.panel-footer
 						.row.container-fluid
 							.col-xs-2.col-sm-1
-								button(type="button").btn.btn-default.fa.fa-plus
+								button#add(type="button").btn.btn-default.fa.fa-plus
 							.col-xs-10.col-sm-11
 								.row
 									.col-xs-3.col-sm-1
@@ -80,7 +80,7 @@ html(lang="de")
 									.col-xs-3.col-sm-2
 										input#be(type="number", min="0", step="0.05", value="0")
 
-				.row.well.text-center
+				#save.row.well.text-center
 					.col-xs-8.col-xs-offset-2.col-sm-6.col-sm-offset-3.col-md-4.col-md-offset-4.text-center
 						button.btn.btn-success.form-control(type="submit", disabled) speichern
 
@@ -89,7 +89,7 @@ html(lang="de")
 					input(type="hidden", name="_method", value="delete")
 					button.btn.btn-danger.form-control(type="submit", disabled) alle Rüstungen löschen
 
-			section.panel.panel-default
+			section#liste.panel.panel-default
 				.panel-heading.dcm-caption Rüstungsteile
 				.panel-body
 					- var counter = 0;
@@ -104,4 +104,4 @@ html(lang="de")
 										- counter += 1;
 						.row
 							.col-lg-12 &nbsp;
-			//script(src="/js/edit-kleidung.js")
+			script(src="/js/edit-kleidung.js")
