--- a/public/css/dropout.css
+++ b/public/css/dropout.css
@@ -7,33 +7,35 @@
 */
 
 ul.options {
-    padding: 0;
-    margin: 0;
-    border: 1px solid black;
-    border-radius: 0.3em;
-    list-style-type: none;
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
+    padding:            0;
+    margin:             0;
+    border:             1px solid black;
+    border-radius:      0.3em;
+    list-style-type:    none;
+    display:            none;
+    position:           absolute;
+    top:                0;
+    left:               5em;
+    z-index:            10;
 }
 .options li {
-    padding: 0 0.5em;
-    background-color: white;
+    padding:            0.5em;
+    background-color:   white;
 }
 .options li:hover {
-    background-color: #eee;
+    background-color:   #eee;
 }
 .options li:first-child {
-    border-top-left-radius:  0.3em;
-    border-top-right-radius: 0.3em;
-    padding-top: 0.3em;
+    border-top-left-radius:     0.3em;
+    border-top-right-radius:    0.3em;
+    padding-top:                0.3em;
 }
 .options li:last-child {
     border-bottom-left-radius:  0.3em;
     border-bottom-right-radius: 0.3em;
-    padding-bottom: 0.3em;
+    padding-bottom:             0.3em;
 }
+/*
 .wrapper {
     display: inline-block;
     border-right: 1px solid gray;
@@ -48,4 +50,4 @@ ul.options {
 }
 .wrapper input[type="text"] {
 }
-
+*/
