making talent spezialisation work.

--- a/views/edit-held/talente.jade
+++ b/views/edit-held/talente.jade
@@ -24,12 +24,18 @@ mixin talentTable(__group, __name)
 					span.badge=Array.isArray(__heldentalent.Spezialisierung) ? __heldentalent.Spezialisierung.length : 0
 					ul.options
 						li
-							input.toggle-custom(type="checkbox")
-							input(type="text", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", disabled)
+							input.unlock.toggle-custom(type="checkbox", disabled=!__isAvailable)
+							input.lock(type="text", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", disabled)
+						if Array.isArray(__heldentalent.Spezialisierung) && __heldentalent.Spezialisierung.length > 0
+							each __spez in __heldentalent.Spezialisierung.filter(function (item) { return !contains(__talent.spezialisierungen, item); })
+								li
+									label
+										input.unlock(type="checkbox", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", value=__spez, checked)
+										span=__spez
 						each __spez in __talent.spezialisierungen
 							li
 								label
-									input.unlock(type="checkbox", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", value=__spez, checked=contains(__heldentalent.Spezialisierung, __spez))
+									input.unlock(type="checkbox", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", value=__spez, checked=contains(__heldentalent.Spezialisierung, __spez), disabled=!__isAvailable)
 									span=__spez
 				.col-xs-3.col-xs-offset-6.col-sm-2.col-sm-offset-0.col-lg-1
 					select.unlock(size="1", name="Talente[#{__name}][#{__idx}][Lernstufe]", disabled=!__isAvailable)
@@ -53,8 +59,17 @@ html(lang="de")
 			input[type='number']:disabled {
 				background-color:	#ddd;
 			}
+			label span {
+				font-weight:		normal;
+			}
+			ul.options {
+				background-color:	white;
+			}
 			ul.options input[type="checkbox"] {
 				margin-right:		0.5em;
+			}
+			ul.options input.lock {
+				width:				80%;
 			}
 	body#top
 		include inc/nav
@@ -109,6 +124,22 @@ html(lang="de")
 										input.isactive(type="checkbox", name="Talente[Nahkampf][#{__idx}][name]", value=__talent.name, id="nk"+__idx, checked=__isAvailable)
 								.col-xs-11.col-sm-4.text-left
 									label(for="nk"+__idx)=__talent.name
+									span.badge.pull-right=Array.isArray(__heldentalent.Spezialisierung) ? __heldentalent.Spezialisierung.length : 0
+									ul.options
+										li
+											input.unlock.toggle-custom(type="checkbox", disabled=!__isAvailable)
+											input.lock(type="text", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", disabled)
+										if Array.isArray(__heldentalent.Spezialisierung) && __heldentalent.Spezialisierung.length > 0
+											each __spez in __heldentalent.Spezialisierung.filter(function (item) { return !contains(__talent.spezialisierungen, item); })
+												li
+													label
+														input.unlock(type="checkbox", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", value=__spez, checked)
+														span=__spez
+										each __spez in __talent.spezialisierungen
+											li
+												label
+													input.unlock(type="checkbox", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", value=__spez, checked=contains(__heldentalent.Spezialisierung, __spez), disabled=!__isAvailable)
+													span=__spez
 								.col-xs-3.col-sm-2
 									select.unlock(size="1", name="Talente[Nahkampf][#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
@@ -139,6 +170,22 @@ html(lang="de")
 										input.isactive(type="checkbox", name="Talente[Fernkampf][#{__idx}][name]", value=__talent.name, id=__name+__idx, checked=__isAvailable)
 								.col-xs-5.col-sm-7.col-lg-9.text-left
 									label(for=__name+__idx)=__talent.name
+									span.badge.pull-right=Array.isArray(__heldentalent.Spezialisierung) ? __heldentalent.Spezialisierung.length : 0
+									ul.options
+										li
+											input.unlock.toggle-custom(type="checkbox", disabled=!__isAvailable)
+											input.lock(type="text", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", disabled)
+										if Array.isArray(__heldentalent.Spezialisierung) && __heldentalent.Spezialisierung.length > 0
+											each __spez in __heldentalent.Spezialisierung.filter(function (item) { return !contains(__talent.spezialisierungen, item); })
+												li
+													label
+														input.unlock(type="checkbox", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", value=__spez, checked)
+														span=__spez
+										each __spez in __talent.spezialisierungen
+											li
+												label
+													input.unlock(type="checkbox", name="Talente[#{__name}][#{__idx}][Spezialisierung][]", value=__spez, checked=contains(__heldentalent.Spezialisierung, __spez), disabled=!__isAvailable)
+													span=__spez
 								.col-xs-3.col-sm-2.col-lg-1
 									select.unlock(size="1", name="Talente[Fernkampf][#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
